# hyena-dna

./: .gitignore  Dockerfile  README.md  create_coords.py  debug.py  env.yml  environment.yml  huggingface.py  requirements.txt  standalone_hyenadna.py  train.py
configs/: config.yaml
configs/callbacks/: checkpoint.yaml  gpu_affinity.yaml
configs/dataset/: chromatin_profile.yaml  genomic_benchmark.yaml  hg38.yaml  hg38_fixed_test.yaml  icl_hg38.yaml  nucleotide_transformer.yaml  species.yaml
configs/evals/: hg38.yaml  hg38_decoder.yaml  hyena_dna_512ksl.yaml  icl_genomics.yaml  instruction_tuned_genomics.yaml  soft_prompting_genomics.yaml
configs/pipeline/: chromatin_profile.yaml  genomic_benchmark.yaml  hg38.yaml  nucleotide_transformer.yaml  species.yaml
configs/task/: masked_multiclass_classification.yaml  multiclass_classification.yaml
evals/: all_benchmarks.sh  all_checkpoints.sh  hg38_inference.py  hg38_inference_decoder.py  instruction_tuned_genomics.py  soft_prompting_genomics.py
notebooks/: multifasta_eda.ipynb  test_gvl_multifasta.ipynb
rust_dl/: Cargo.toml  pyproject.toml
rust_dl/python/rust_dl/: __init__.py
rust_dl/python/tests/: test_all.py
rust_dl/src/: data.rs  lib.rs
scripts/: gen_multifasta_file_map.py  test_gvl_multifasta.py
src/callbacks/: gpu_affinity.py  multifasta_seqlen_warmup.py  norms.py  params.py  progressive_resizing.py  seqlen_warmup_reload.py  timer.py  wandb.py
src/dataloaders/: __init__.py  base.py  et.py  fault_tolerant_sampler.py  genomics.py  gvl.py  multifasta.py
src/ops/: fftconv.py  krylov.py  toeplitz.py  (+2 more)
(+81 files in other folders)
