[package]
name = "rust_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_dl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
ai-dataloader = { version = "0.6.1" }
noodles = { version = "0.61.0", features = ["fasta", "bed", "core"] }
